--- a/roles/pytango/tasks/main.yml
+++ b/roles/pytango/tasks/main.yml
@@ -30,28 +30,30 @@
 - name: Install dependencies
   apt:
     name:
-        - libboost-python-dev 
-        - python3-dev 
+        - libboost-python-dev
+        - python3-dev
         - python3-pip
+        - python3.7
+        - python3.7-dev
         - python-apt
         - virtualenv
         - dpkg-dev
         - libffi-dev
-        - libreadline-gplv2-dev 
-        - libncursesw5-dev 
-        - libssl-dev 
-        - libsqlite3-dev 
-        - tk-dev 
-        - libgdbm-dev 
-        - libc6-dev 
+        - libreadline-gplv2-dev
+        - libncursesw5-dev
+        - libssl-dev
+        - libsqlite3-dev
+        - tk-dev
+        - libgdbm-dev
+        - libc6-dev
         - libbz2-dev
     state: latest
-    force: yes 
+    force: yes
     update_cache: yes
   when: install_pytango == 'yes'
 
 - name: Check if python3.7 exists
-  stat: 
+  stat:
     path: /usr/local/bin/python3.7
   register: python_exe
 
@@ -66,7 +68,7 @@
     make
     make install
     rm -r /usr/src/python
-  when: 
+  when:
     - ansible_distribution_release != "buster"
     - install_pytango == 'yes'
     - python_exe.stat.exists == false
@@ -92,10 +94,14 @@
         ln -sf /usr/lib/x86_64-linux-gnu/libz.so /usr/lib/libz.so
     fi
 
+- name: set proxy if required
+  set_fact:
+    proxy_settings: "{% if 'http_proxy' in minikube_environment_vars %}HTTP_PROXY={{ minikube_environment_vars['http_proxy'] }}{% endif %} {% if 'https_proxy' in minikube_environment_vars %}HTTPS_PROXY={{ minikube_environment_vars['https_proxy'] }}{% endif %} {% if 'no_proxy' in minikube_environment_vars %}NO_PROXY={{ minikube_environment_vars['no_proxy'] }}{% endif %}"
+
 - name: Install pytango
   shell: |
     cd /build_pytango_dir
-    export LC_ALL=C.UTF-8 \
+    export {{ proxy_settings }} LC_ALL=C.UTF-8 \
       LANG=C.UTF-8 \
       PIPENV_TIMEOUT=900 \
       PATH=/venv/bin:$PATH \
@@ -107,5 +113,5 @@
     virtualenv -p python3.7 /venv
     pip3 install pipenv
     pipenv install --dev
-  when: 
+  when:
     - install_pytango == 'yes'
