ST-429 - fix grafana auth
Signed-off-by: Piers Harding <piers@ompka.net>

--- a/roles/prometheus/tasks/docker_exporter.yml
+++ b/roles/prometheus/tasks/docker_exporter.yml
@@ -83,6 +83,7 @@
       docker_image:
         name: gcr.io/google-containers/cadvisor
         tag: "{{ cadvisor_docker_tags }}"
+        source: pull
 
     - name: Stop cadvisor container
       docker_container:
