--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -119,6 +119,7 @@ grafana_plugins:
   - vonage-status-panel
   - grafana-piechart-panel
   - grafana-polystat-panel
+grafana_admin_password: letmein
 
 # Alert Manager
 # slack_api_url has to be set in the command line
