ST-429 - set stop time on Prometheus
Signed-off-by: Piers Harding <piers@ompka.net>

--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -165,6 +165,7 @@
 - name: Stop prometheus container
   docker_container:
     name: prometheus
+    stop_timeout: 180
     state: absent
 
 - name: Start prometheus container
