add runners hosts

--- a/clean_runners.yaml
+++ b/clean_runners.yaml
@@ -1,7 +1,7 @@
 ---
 
 - name: clean_runners
-  hosts: localhost
+  hosts: runners
   become: true
   become_method: sudo
   become_flags: '-E -S -n'
