--- a/deploy_docker_exporter.yml
+++ b/deploy_docker_exporter.yml
@@ -1,7 +1,9 @@
 
 ---
 - name: deploy_docker_exporter
-  hosts: alldocker
+  hosts:
+    - alldocker
+    - allrunners
   vars:
     mode: "docker"
   become: true
